<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_background"
    tools:context="de.hdmstuttgart.thelaendofadventure.ui.fragments.MainPageFragment">

    <!--
...
        app:layout_constraintTop_toTopOf="parent"
        app:mapbox_cameraTargetLat="48.77849654840248"
        app:mapbox_cameraTargetLng="9.17961910927422"
        app:mapbox_cameraZoom="17.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_page_profile_button_container"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/main_page_profile_button"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:contentDescription="@string/profileButton"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:scaleType="centerCrop"
...
