<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_user_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/creation_page_background"
    tools:context="de.hdmstuttgart.thelaendofadventure.ui.fragments.UserCreationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/name_text_input"
            android:layout_width="0dp"
            android:layout_height="69dp"
            android:autofillHints="username"
            android:background="@drawable/text_field_nine"
            android:ellipsize="middle"
            android:gravity="center"
...
            app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
            app:layout_constraintTop_toTopOf="@id/guidelineTextTop"
            app:layout_constraintBottom_toBottomOf="@id/guidelineTextBottom"
            tools:textAlignment="center" />

        <TextView
            android:id="@+id/user_creation_page_confirm_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/conversation_field"
            android:gravity="center"
            android:minWidth="200dp"
            android:minHeight="80dp"
...
