...
                    app:layout_constraintWidth_max="320dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/user_page_name_field"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:autofillHints="name"
...
